--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "@react-leaflet/core": "^2.1.0",
     "antd": "^5.12.8",
     "axios": "^1.6.5",
     "formik": "^2.4.5",
     "khalti-checkout-web": "^2.2.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
+    "mapbox-gl": "^3.5.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +27,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-leaflet": "^4.2.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-map-gl": "^7.1.7",
     "react-router-dom": "^6.21.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^9.1.3",
